--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <!-- Тег meta для указания кодировки -->
   <meta charset="utf-8">
+  <title>My project</title>
   <link rel="stylesheet" type="text/css" href="UI/reset.css" >
   <link rel="stylesheet" type="text/css" href="UI/style.css" >
 </head>
