--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <ul class="main_menu">
     <li><a title="About UI Lab" href="http://htmlbook.ru">About UI Lab</a>
     <li><a title="Home Tasks" href="http://htmlbook.ru">Home Tasks</a>
-    <li><a title="Test&#38Exams" href="http://htmlbook.ru">Test&#38Exams</a>
+    <li><a title="Test&#38;Exams" href="http://htmlbook.ru">Test&#38;Exams</a>
   </ul>
 
  <article>
